# python_web_HW_14

./: README.md  main.py  pyproject.toml  test.db
docs/: conf.py  index.rst
src/conf/: config.ini
src/database/: models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py
src/services/: auth.py  email.py
tests/: test_unit_repository_contacts.py  test_unit_repository_users.py
